Updated welcome email copy. Closes #486

--- a/app/views/user_mailer/send_welcome_email.html.erb
+++ b/app/views/user_mailer/send_welcome_email.html.erb
@@ -1,8 +1,12 @@
-Thank you for signing up with YoMobi. You're one step closer to expanding your fan base and making it easier for visitors to find you wherever they are. Your mobile site URL is: <a href="<%= URI.encode @mobile_url %>"><%= @mobile_url %></a>
+Thank you for signing up with YoMobi. You're one step closer to expanding your fan base and making it easier for visitors to find you wherever they are.
 <br />
 <br />
 
-Use your YoMobi mobile site to complement your existing desktop site. Click here for instructions on how to seamlessly direct visitors to your new mobile site whenever they visit from a mobile device. You can also get instructions at any time by signing in to YoMobi and clicking on the General Settings link in the mobile site builder. <a href="http://www.yomobi.com/builder/main#edit-settings">General Settings link</a> in the mobile site builder.
+Your mobile site URL is: <a href="<%= URI.encode @mobile_url %>"><%= @mobile_url %></a>
+<br />
+<br />
+
+Use your YoMobi mobile site to complement your existing desktop site. <a href="http://yomobi.com">Click here for instructions</a> on how to seamlessly direct visitors to your new mobile site whenever they visit from a mobile device.
 <br />
 <br />
 
