--- a/public/stylesheets/jquery.wysiwyg.css
+++ b/public/stylesheets/jquery.wysiwyg.css
@@ -12,7 +12,7 @@ div.wysiwyg ul.toolbar li {
   padding: 0;
   border: 1px dotted rgb(240, 240, 240);
   /*background: rgb(240, 240, 240); -moz-user-select: none; -webkit-user-select: none; user-select: none;*/
-  background: url(/images/ui/jquery.wysiwyg.png) no-repeat -20px 0;
+  background: url(/images/ui/jquery.wysiwyg.gif) no-repeat -20px 0;
   list-style: none; float: left; clear: none;
   text-indent: -5000px; opacity: 1; filter: alpha(opacity=100); display: block; cursor: pointer;
 }
