When clicked confirmation link is already confirmed, redirect user appropriately. Closes #362

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -4,7 +4,7 @@
 
 <p>
 Please confirm your email address to continue the registration: 
-<%= link_to 'Confirm Now', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %>
+<%= link_to 'Confirm Now', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token,:uid => @resource[:id]) %>
 </p>
 
 <p>
