Added more mobile site meta data. Closes #487

--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -3,6 +3,7 @@ html lang="en-US"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     link rel="canonical" href==@company.mobile_url
+    = render 'mobile/meta'
     
     title = "#{@company.name} | Mobile Website | YoMobi"
     = render 'shared/iphone-meta.html'
