--- a/app/views/mobile/_meta.slim
+++ b/app/views/mobile/_meta.slim
@@ -1,5 +1,5 @@
 meta property="og:title" content=@company.name
-meta property="og:type" content="yomobi:#{@company.company_type.name}"
+meta property="og:type" content="#{@company.company_type.og_type_name}"
 meta property="og:url" content==@company.mobile_url
 meta property="og:image" content==@company.logo.url(:mobile)
 meta property="og:site_name" content=@company.name
