--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -1,5 +1,5 @@
 ! doctype 5
-html lang="en-US"
+html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     link rel="canonical" href==@company.mobile_url
