--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -387,7 +387,7 @@
         p.response.error
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
-      h3 Thank you for signing up to follow this site.
+      h3 Thank you for following this site.
 
   script.hours-page(type="text/template")
     - %w(mon tue wed thu fri sat sun).each do |day|
