call me back widget copy tweak. Closes #493

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -304,7 +304,7 @@
         br
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
-      h3 Thank you for your message. We will contact you soon.
+      h3 Your call back request has been sent.
   
   script.tell_friend-page(type="text/template")
     .input-wrap
