Removed extra http:// from mobile email share button. Closes #494

--- a/app/views/mobile/_social-share.html.erb
+++ b/app/views/mobile/_social-share.html.erb
@@ -15,7 +15,7 @@ title = u "#{@company.name}'s Mobile Website - YoMobi"
 
   <li><a rel="nofollow"  target="_blank" href="http://www.google.com/bookmarks/mark?op=edit&amp;bkmk=<%= curl %>&amp;title=<%= title %>&amp;annotation=This%20site%20os%20interesting." title="Google"><img src="/images/share/google.png" title="Google Bookmarks" alt="Google Bookmarks" /></a></li>
 
-  <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<%=title %>&amp;body=http%3A%2F%2F<%= curl %>" title="email"><img src="/images/share/email.png" title="email" alt="email" /></a></li>
+  <li><a rel="nofollow"  target="_blank" href="mailto:?subject=<%=title %>&amp;body=<%= curl %>" title="email"><img src="/images/share/email.png" title="email" alt="email" /></a></li>
 </ul>
 
 <div class="clearfix"></div>
