Fixed typo. Closes #495

--- a/app/views/signup/default/step-1.slim
+++ b/app/views/signup/default/step-1.slim
@@ -12,7 +12,7 @@
       p.error
         ' Invalid Site Name. Site Name must be at least 2 characters and at most
         = MAX_COMPANY_NAME_LENGTH
-        | &nbps;characters.
+        | &nbsp;characters.
     input type="text" name="step_data[title]" value="#{@data['title'] }" maxlength=MAX_COMPANY_NAME_LENGTH
     
     hr
