Added favicon. Closes #499

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -2,6 +2,7 @@
 html lang="en-US"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    link rel="shortcut icon" type="image/x-icon" href="yomobi.ico"
     link rel="canonical" href="http://www.yomobi.com"
     
     = render 'shared/meta-description'
