--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -2,6 +2,7 @@
 html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    link rel="shortcut icon" type="image/x-icon" href="yomobi.ico"
     link rel="canonical" href==@company.mobile_url
     = render 'mobile/meta'
     
