--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -19,7 +19,8 @@ html lang="en-US"
     #global-container
       #header.signed-in
         .content
-          a#logo href=builder_main_path YoMobi
+          a#logo href=builder_main_path
+            img src="/images/yomobi-logo-20.png"
           = render :partial => 'shared/nav'
           .clearfix
       #page-container
