Wizard copy tweak. Closes #509

--- a/app/views/signup/default/step-3.slim
+++ b/app/views/signup/default/step-3.slim
@@ -16,7 +16,7 @@
 = form_tag account_setup_path(3), :multipart => true, :id => 'account-setup-box', :class => 'center-box' do
   .content
     h2
-      ' Select a new picture
+      ' Select a Site Picture
       img.help-bubble src="/images/ui/help-bubble.png" title=t('account_setup.help.site_pic')
     
     table
