Signup bar copy tweak. Closes #513

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -31,7 +31,7 @@ html lang="en-US"
         .signup-bar
           .content
             a.pretty-button href="/" Sign Up
-            .description YoMobi helps you connect to millions more consumer with a mobile optimized website.
+            .description = t 'signup_bar'
             .clearfix
       #page-container-wrapper class=@page_wrapper_class
         #page-container
