--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -177,8 +177,9 @@
         td.wtab
           div {{ prettyTabs[2] }}
 
+  / data taken from mobile/base.js : getIconData()
   script.sidebar-widget(type="text/template")
-    .sidebar.home-icon class="{{ singletonClass }}" data-name="{{ name }}" data-wtype="{{ wtype }}"
+    .sidebar.home-icon class="{{ singletonClass }}" data-wtype="{{ wtype }}" data-wsubtype="{{ wsubtype }}"
       img.add.right src="/images/ui/plus.png"
       img.add.left src="/images/ui/plus.png"
       img.icon{ src="/images/widgets/{{ iconName }}.png" }
@@ -527,7 +528,7 @@
       | <% } %>
       label Allow users to opt-in for text messages.
   
-  script.hours-edit-area(type="text/template")
+  script.business-hours-edit-area(type="text/template")
     .double-time-input
       input type="checkbox" name="doubleTime"
       b Specify two sets of hours for each day.
@@ -548,7 +549,7 @@
           .clearfix
     .clearfix
 
-  script.gmap-edit-area(type="text/template")
+  script.find-us-edit-area(type="text/template")
     label Address 1*:
     input name="addr1" type="text" value="{{ _maybe.addr1 }}"
     br
@@ -589,7 +590,7 @@
     label Paste your "Embed this Calendar" link here:
     textarea(name="paste" type="text") {{ _maybe.description }}
   
-  script.page_tree-edit-area.menu-edit-area.services-edit-area.products-edit-area.property-listings-edit-area.locations-edit-area(type="text/template")
+  script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.property-listings-edit-area.locations-edit-area(type="text/template")
     | <% if (onHomePage === true) { %>
     input type="button" name="beginEditing" value="Click Here to Start Editing"
 
