Namespaced account settings css. Also changed title.

--- a/app/views/account/edit.slim
+++ b/app/views/account/edit.slim
@@ -1,6 +1,6 @@
-#account-setup-box.center-box
+#account-settings-box.center-box
   .content
-    h2 My Account
+    h2 Account Settings
     / .divider
 
     = form_for @user, :url => update_account_path do |f|
