Updated mobile site to use gradient background.

--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -12,8 +12,7 @@ $light-border: #b3b3b3;
 $page-width: 960px;
 
 $dynamic-width: 320px;
-$color-topbar-original: #3b5998;
-$color-topbar: #405b80;
+$color-topbar: #405b80 url(/images/bg-header.png);
 
 $back-bar-title-font-size: 12px;
 $back-bar-title-width: 250px;
