--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -67,7 +67,7 @@ a img {
 .company-info {
   width: 100%;
   padding-left: 0 1px 0 8px;
-  background: #405b80;
+  background: #405b80 url(/images/bg-header.png);
   color: white; }
   .company-info table {
     height: 36px; }
@@ -112,7 +112,7 @@ a img {
   display: none;
   padding: 0 0;
   border-bottom: 2px solid #627aad;
-  background: #405b80;
+  background: #405b80 url(/images/bg-header.png);
   text-align: center; }
   .ad-bar.bottom {
     height: 48px; }
