Added redirect script to home page. Closes #514

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,3 +1,6 @@
+script type="text/javascript" var _RSITE = 'http://www.yomobi.com/yomobi';
+script type="text/javascript" src="http://yomobi.com/javascripts/mobile-redirect.js"
+
 #banner
   h2 = t 'home_page.banner.title'
   p style="font-size:14px" = t 'home_page.banner.subtitle'
