--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -49,3 +49,6 @@ html lang="en-US"
     = javascript_include_tag 'util'
     = javascript_include_tag 'notice'
     = yield :js
+
+    - if Rails.env.production?
+      = javascript_include_tag 'google-analytics'
