--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -68,3 +68,6 @@ html lang="en-US"
     = yield :js
 
     = javascript_include_tag 'notice'
+
+    - if Rails.env.production?
+      = javascript_include_tag 'google-analytics'
