--- a/app/views/layouts/mobile_basic.slim
+++ b/app/views/layouts/mobile_basic.slim
@@ -13,3 +13,6 @@ html lang="en-US"
           a#logo href=root_path YoMobi
       #main-content
         = yield
+
+    - if Rails.env.production?
+      = javascript_include_tag 'google-analytics'
