Pointed widget help links to each one's respective help page. Closes #526

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -24,7 +24,7 @@
       .widget-name
         span {{ prettyName }}
       p.help-text
-        a.help-link href="#" Help
+        a.help-link href="{{ helpUrl }}" target="_blank" Help
         span.dot &nbsp;&middot;&nbsp;
         a.rename-link href="#" Rename
     div class="edit-area {{ wtype }}"
