Pointed header and footer links to help pages. Closes #528

--- a/app/views/shared/_footer-links.html.erb
+++ b/app/views/shared/_footer-links.html.erb
@@ -3,5 +3,5 @@
   <a href="<%= privacy_path %>">Privacy</a>  <span class="dot">&middot;</span>
   <a href="<%= terms_path %>">Terms</a>    <span class="dot">&middot;</span>
   <a href="mailto:feedback@yomobi.com">Feedback</a> <span class="dot">&middot;</span>
-  <a href="#">Help</a>
+  <a href="http://help.yomobi.com" target="_blank">Help</a>
 </div>
