--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -1,5 +1,5 @@
 #nav
   a href=destroy_user_session_path Sign Out
-  a href="#" Help
+  a href="http://help.yomobi.com" target="_blank" Help
   a href=account_path Account Settings
   a href=builder_main_path Website Builder
