Updated	general settings and traffic booster help links. Closes #534

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -78,7 +78,7 @@
       .widget-name
         | General Settings
       p.help-text
-        a.help-link href="#" Help
+        a.help-link href="http://help.yomobi.com/Account/GeneralSettings" target="_blank" Help
     div class="edit-area edit-settings"
       .explanation == t 'builder.help.edit_settings'
 
@@ -149,7 +149,7 @@
       .widget-name
         | Traffic Booster
       p.help-text
-        a.help-link href="#" Help
+        a.help-link href="http://help.yomobi.com/Account/TrafficBooster" target="_blank" Help
     div class="edit-area"
       .explanation == t 'builder.help.edit_keywords'
 
