Added help link to landing builder help content. Closes #535

--- a/app/views/builder/_builder-help.slim
+++ b/app/views/builder/_builder-help.slim
@@ -1,5 +1,9 @@
 #builder-help
   label To Start:
+
+  p.help-text
+    a.help-link href="http://help.yomobi.com/Mobile/SiteBuilder" target="_blank" Help
+  
   p Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
   img.help-img.first src="/images/builder-help-drag.png"
   .spacer
