- Fixed tab bar editor - Renamed mapp's `widgetsInUse` to `widgets` - Moved `widgetsAvailable` from mapp to bapp

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -67,11 +67,11 @@
             option = "==None=="
             | <%
             = "var tabIdx = #{ n };"
-            | for (var i=0; i<wnames.length; i++) {
-            |   if ( wtabNames[tabIdx] == wnames[i] ) {
-            |     print('<option selected="selected">'+wnames[i]+'</option>');
+            | for (var i=0; i<widgetVals.length; i++) {
+            |   if ( wtabNames[tabIdx] == widgetVals[i].name ) {
+            |     print('<option selected="selected" value="'+widgetVals[i].id+'">'+widgetVals[i].name+'</option>');
             |   } else {
-            |     print('<option>'+wnames[i]+'</option>');
+            |     print('<option value="'+widgetVals[i].id+'">'+widgetVals[i].name+'</option>');
             |   }
             | } %>
   
