Added video page. Closes #539

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -8,7 +8,7 @@ script type="text/javascript" src="http://yomobi.com/javascripts/mobile-redirect
 
   .images
     img.lfloat src="/images/home-phone.png"
-    a.pretty-button.easy-button href="#" See&nbsp;How&nbsp;Easy&nbsp;It&nbsp;Is
+    a.pretty-button.easy-button href=easy_path See&nbsp;How&nbsp;Easy&nbsp;It&nbsp;Is
 
 #signup-box
   div
