--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -285,5 +285,9 @@ label {
     font-size: 1.5em;
     margin-top: 20px; }
 
-#privacy, #terms {
+#privacy, #terms, #about {
   margin: 40px; }
+
+#easy {
+  margin: 40px 0;
+  text-align: center; }
