--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -485,7 +485,7 @@
     #jeditor-wrapper
       textarea#jeditor rows=8 cols=8 {{ _maybe.content }}
 
-  script.phone-edit-area(type="text/template")
+  script.call-us-edit-area(type="text/template")
     label Your phone number*:
     input(name="phone" type="text" value="{{ _maybe.phone }}")
   
