tell_friend widget copy tweak. Closes #543

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -501,7 +501,7 @@
     input(name="email" type="text" value="{{ _maybe.email }}")
   
   script.tell-a-friend-edit-area(type="text/template")
-    p This widget appears on your mobile site and makes it easy for your visitors to tell their friends about you.
+    p This widget appears as an icon on your mobile site and makes it easy for visitors to share your site with their friends.
   
   script.booking-request-edit-area(type="text/template")
     label Your Email Address*:
