Restricted mobile urls from reserved names. Closes #544

--- a/app/views/signup/default/step-1.slim
+++ b/app/views/signup/default/step-1.slim
@@ -22,6 +22,8 @@
 
     - if @errors['site_url'] == 'illegal'
       p.error Invalid URL: the URL must be at least 3 characters long and contain only A-Z, a-z, 0-9, underscores (_), and dashes (-).
+    - elsif @errors['site_url'] == 'reserved'
+      p.error Sorry, that name is reserved. Please choose another.
     - elsif @errors['site_url'] == 'taken'
       p.error URL is already taken.
     - elsif @errors['site_url'] == 'taken?'
