--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -187,21 +187,21 @@ script.menu-item type="text/template"
     .name {{ item.name }}
     .price {{ item.price }}
     .clearfix
-    .desc {{ item.desc }}
+    pre.desc {{ item.desc }}
 
 script.services-item type="text/template"
   .item class="{{ cycle }}"
     .name {{ item.name }}
     .price {{ item.price }}
     .clearfix
-    .desc {{ item.desc }}
+    pre.desc {{ item.desc }}
 
 script.products-item type="text/template"
   .item class="{{ cycle }}"
     .name {{ item.name }}
     .price {{ item.price }}
     .clearfix
-    .desc {{ item.desc }}
+    pre.desc {{ item.desc }}
 
 script.property-listings-item type="text/template"
   .item class="{{ cycle }}"
@@ -223,7 +223,7 @@ script.property-listings-item type="text/template"
       a href="http://www.realtor.com/search/searchresults.aspx?mlslid={{ item.mls }}" {{ item.mls }}
     | <% } %>
     
-    .desc.long {{ item.desc }}
+    pre.desc.long {{ item.desc }}
 
 script.locations-item type="text/template"
   .item class="{{ cycle }}"
@@ -233,4 +233,4 @@ script.locations-item type="text/template"
       a href="tel:{{ item.phone }}" {{ item.phone }}
     div
       a href="http://maps.google.com/maps?q={{ item.address }}" target="_blank" {{ item.address }}
-    .desc.long {{ item.desc }}
+    pre.desc.long {{ item.desc }}
