--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -474,9 +474,10 @@ div.wysiwyg ul.toolbar {
     padding: 1px 0 0 0;
   }
   select {
-    width: 331px;
+    width: 360px;
     margin: 2px 0;
-    height: 111px; }
+    height: 111px;
+  }
   .arrows {
     float: right;
     padding: 5px 2px 0 0;
