Reordering category stuff now works.

--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -237,5 +237,5 @@ script.locations-item type="text/template"
 
 / this represents a page in the page_tree list view
 script.category-item type="text/template"
-  .leaf-name.item class="{{ cycle }}" data-cat-id="{{ item._id }}"
+  .leaf-name.item class="{{ cycle }}" data-id="{{ item._id }}"
     | {{ item.name }}
