--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -429,7 +429,7 @@
     pre.desc {{ _maybe.description }}
   
   script.category-cat(type="text/template")
-    .category.item class="{{ cycle }}" data-cat-id="{{ cat._id }}"
+    .category.item class="{{ cycle }}" data-id="{{ cat._id }}"
       | {{ cat.name }}
 
   script.category-page(type="text/template")
