Renaming now works

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -596,7 +596,7 @@
     | <%  } %>
 
     | <%       if (isThereStuff == true) { %>
-    input type="button" name="rename_item" value="Rename"
+    input type="button" name="rename" value="Rename"
     input type="button" name="edit" value="Edit"
     input type="button" name="rem_item" value="Delete"
     | <%       } %>
