--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -591,8 +591,8 @@
     br
     
     | <%  if (stuff.length >= 2) { %>
-    input.rfloat.down-arrow type="button" name="down_cat" data-mod="1" value="&#9660;"
-    input.rfloat.up-arrow type="button" name="up_cat" data-mod="-1" value="&#9650;"
+    input.rfloat.down-arrow type="button" name="move_down" data-mod="1" value="&#9660;"
+    input.rfloat.up-arrow type="button" name="move_up" data-mod="-1" value="&#9650;"
     | <%  } %>
 
     | <%       if (isThereStuff == true) { %>
