Adding items now works

--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -1,5 +1,8 @@
 script.menu-item-dialog(type="text/template")
   #dialog-confirm class="addItem"
+
+    input.item-input type="hidden" name="type" value="item"
+
     p Menu Item Information:
     label Name*
     br
@@ -33,6 +36,9 @@ script.menu-item-dialog(type="text/template")
 
 script.services-item-dialog(type="text/template")
   #dialog-confirm class="addItem"
+
+    input.item-input type="hidden" name="type" value="item"
+
     p Service Information:
     label Name*
     br
@@ -66,6 +72,9 @@ script.services-item-dialog(type="text/template")
 
 script.products-item-dialog(type="text/template")
   #dialog-confirm class="addItem"
+
+    input.item-input type="hidden" name="type" value="item"
+
     p Product Information:
     label Name*
     br
@@ -99,6 +108,9 @@ script.products-item-dialog(type="text/template")
 
 script.property-listings-item-dialog(type="text/template")
   #dialog-confirm class="addItem"
+
+    input.item-input type="hidden" name="type" value="item"
+
     p Listing Information:
     label Title*
     br
@@ -144,6 +156,9 @@ script.property-listings-item-dialog(type="text/template")
 
 script.locations-item-dialog(type="text/template")
   #dialog-confirm class="addItem"
+
+    input.item-input type="hidden" name="type" value="item"
+
     p Location Information:
     label Name*
     br
