Deleting category nodes now works

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -598,7 +598,7 @@
     | <%       if (isThereStuff == true) { %>
     input type="button" name="rename" value="Rename"
     input type="button" name="edit" value="Edit"
-    input type="button" name="rem_item" value="Delete"
+    input type="button" name="delete" value="Delete"
     | <%       } %>
 
     br
