Fixed page_tree builder issues

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -577,7 +577,7 @@
     | <% if (onHomePage === true) { %>
     input type="button" name="beginEditing" value="Click Here to Start Editing"
 
-    | <% } else if (!_maybe.isLeaf) { %>
+    | <% } else if (currentNodeType !== 'page') { %>
     br
     .crumb-wrap
       b Editing:
